tests/ui/unstable-feature_bound/unstable_feature_bound_multi_attr.stderr
error: unstable feature `feat_bar` is used without being enabled.
  --> $DIR/unstable_feature_bound_multi_attr.rs:33:5
   |
LL |     Bar::foo();
   |     ^^^
   |
   = help: The feature can be enabled through #[unstable_feature_bound(feat_bar)] in std/core, or #[feature(feat_bar)] outside of std/core.
note: required for `Bar` to implement `Foo`
  --> $DIR/unstable_feature_bound_multi_attr.rs:16:6
   |
LL | #[unstable_feature_bound(feat_bar, feat_koo)]
   | --------------------------------------------- unsatisfied trait bound introduced here
LL | #[unstable_feature_bound(feat_foo, feat_moo)]
LL | impl Foo for Bar {
   |      ^^^     ^^^

error: aborting due to 1 previous error

